Clear empty embeddables from User entity, fixed PHPCS config

--- a/Resources/config/datagrid/admin_security_user.yml
+++ b/Resources/config/datagrid/admin_security_user.yml
@@ -16,16 +16,18 @@ columns:
       translation_domain: FSiAdminSecurity
   password_reset_token:
     type: boolean
+    field: passwordResetToken.isNonExpired
     options:
       label: admin.user_list.datagrid.password_reset_token
       translation_domain: FSiAdminSecurity
-      field_mapping: [ 'passwordResetToken.isNonExpired' ]
+      field_mapping: [ 'passwordResetToken' ]
   activation_token:
     type: boolean
+    field: activationToken.isNonExpired
     options:
       label: admin.user_list.datagrid.activation_token
       translation_domain: FSiAdminSecurity
-      field_mapping: [ 'activationToken.isNonExpired' ]
+      field_mapping: [ 'activationToken' ]
   batch:
     type: batch
     options:
