--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/doctrine-bridge": "^4.4|^5.4",
         "symfony/form": "^4.4|^5.4",
         "symfony/framework-bundle": "^4.4|^5.4",
+        "symfony/password-hasher": "^5.4|6.2",
         "symfony/property-access": "^4.4|^5.4",
         "symfony/security-bundle": "^4.4|^5.4",
         "symfony/swiftmailer-bundle": "^3.5",
@@ -43,7 +44,7 @@
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.3",
         "friends-of-phpspec/phpspec-expect": "^4.0",
-        "fsi/resource-repository-bundle": "^2.1",
+        "fsi/resource-repository-bundle": "^2.2",
         "phpspec/phpspec": "^7.0",
         "phpstan/phpstan": "^1.9",
         "phpstan/phpstan-beberlei-assert": "^1.0",
