Fixed user DataSource element

--- a/Resources/config/datagrid/admin_security_user.yml
+++ b/Resources/config/datagrid/admin_security_user.yml
@@ -14,20 +14,16 @@ columns:
     options:
       label: admin.user_list.datagrid.last_login
       translation_domain: FSiAdminSecurity
-  password_reset_token:
+  password_reset_token_non_expired:
     type: boolean
-    field: passwordResetToken.isNonExpired
     options:
       label: admin.user_list.datagrid.password_reset_token
       translation_domain: FSiAdminSecurity
-      field_mapping: [ 'passwordResetToken' ]
-  activation_token:
+  activation_token_non_expired:
     type: boolean
-    field: activationToken.isNonExpired
     options:
       label: admin.user_list.datagrid.activation_token
       translation_domain: FSiAdminSecurity
-      field_mapping: [ 'activationToken' ]
   batch:
     type: batch
     options:
