--- a/features/fixtures/project/config/packages/doctrine.yaml
+++ b/features/fixtures/project/config/packages/doctrine.yaml
@@ -3,7 +3,7 @@ doctrine:
         driver:   pdo_sqlite
         user:     admin
         charset:  UTF8
-        path: "%kernel.project_dir%/var/data.sqlite"
+        path: "%kernel.project_dir%/var/data/data.sqlite"
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
