--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "doctrine/persistence": "^2.5|^3.0",
         "fsi/admin-bundle" : "^4.0@dev",
         "fsi/data": "^1.0@dev",
+        "fsi/translatable": "^1.0@dev",
         "symfony/console": "^4.4|^5.4",
         "symfony/dependency-injection": "^4.4|^5.4",
         "symfony/doctrine-bridge": "^4.4|^5.4",
@@ -64,7 +65,7 @@
         "doctrine/doctrine-cache-bundle": "<1.4.0",
         "fsi/datasource": "<2.1",
         "symfony/expression-language": "<4.4",
-        "twig/twig": "<1.43"
+        "twig/twig": "<2.0"
     },
     "config": {
         "bin-dir": "vendor/bin"
