--- a/Resources/config/routing/admin_activation.yaml
+++ b/Resources/config/routing/admin_activation.yaml
@@ -1,11 +1,7 @@
 fsi_admin_activation:
-    path: /{translatableLocale}/activation/activate/{token}
+    path: /activation/activate/{token}
     controller: admin_security.controller.activation:activateAction
-    defaults:
-        translatableLocale: '%admin.default_locale%'
 
 fsi_admin_activation_change_password:
-    path: /{translatableLocale}/activation/change-password/{token}
+    path: /activation/change-password/{token}
     controller: admin_security.controller.activation:changePasswordAction
-    defaults:
-        translatableLocale: '%admin.default_locale%'
