--- a/Resources/config/routing/admin_password_reset.yaml
+++ b/Resources/config/routing/admin_password_reset.yaml
@@ -1,11 +1,7 @@
 fsi_admin_security_password_reset_request:
-    path: /{translatableLocale}/password-reset/request
+    path: /password-reset/request
     controller: admin_security.controller.password_reset.request:requestAction
-    defaults:
-        translatableLocale: '%admin.default_locale%'
 
 fsi_admin_security_password_reset_change_password:
-    path: /{translatableLocale}/password-reset/change-password/{token}
+    path: /password-reset/change-password/{token}
     controller: admin_security.controller.password_reset.change_password:changePasswordAction
-    defaults:
-        translatableLocale: '%admin.default_locale%'
