Use Symfony Mailer instead of SwiftMailer

--- a/features/fixtures/project/config/packages/fsi_admin_security.yaml
+++ b/features/fixtures/project/config/packages/fsi_admin_security.yaml
@@ -16,4 +16,4 @@ fsi_admin_security:
             change_password: "activation.html.twig"
         password_reset:
             request: "request.html.twig"
-            change_password: "change_password.html.twig"
+            change_password: "changePassword.html.twig"
