--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         "symfony/doctrine-bridge": "^4.4|^5.4",
         "symfony/form": "^4.4|^5.4",
         "symfony/framework-bundle": "^4.4|^5.4",
+        "symfony/mailer": "^4.4|^5.4",
         "symfony/property-access": "^4.4|^5.4",
         "symfony/security-bundle": "^4.4|^5.4",
-        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "^4.4|^5.4",
         "symfony/validator": "^4.4|^5.4",
-        "twig/twig": "^3.4,>=3.4.3"
+        "twig/twig": "^3.6"
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
