--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
         "symfony/form": "^4.4|^5.4",
         "symfony/framework-bundle": "^4.4|^5.4",
         "symfony/mailer": "^4.4|^5.4",
-        "symfony/property-access": "^4.4|^5.4",
+        "symfony/property-access": "^4.4|^5.4|^6.0",
         "symfony/security-bundle": "^4.4|^5.4",
         "symfony/twig-bundle": "^4.4|^5.4",
-        "symfony/validator": "^4.4|^5.4",
+        "symfony/validator": "^4.4|^5.4|^6.0",
         "twig/twig": "^3.6"
     },
     "require-dev": {
