--- a/Resources/config/routing/admin_password_reset.yaml
+++ b/Resources/config/routing/admin_password_reset.yaml
@@ -1,7 +1,7 @@
 fsi_admin_security_password_reset_request:
     path: /password-reset/request
-    controller: admin_security.controller.password_reset.request:requestAction
+    controller: admin_security.controller.password_reset.request
 
 fsi_admin_security_password_reset_change_password:
     path: /password-reset/change-password/{token}
-    controller: admin_security.controller.password_reset.change_password:changePasswordAction
+    controller: admin_security.controller.password_reset.change_password
