--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "fsi/admin-bundle" : "^4.0@dev",
         "fsi/data": "^1.0@dev",
         "fsi/translatable": "^1.0@dev",
+        "psr/clock": "^1.0",
         "symfony/console": "^4.4|^5.4",
         "symfony/dependency-injection": "^4.4|^5.4",
         "symfony/doctrine-bridge": "^4.4|^5.4",
