--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,17 @@
         "doctrine/orm": "^2.13",
         "doctrine/persistence": "^2.5|^3.0",
         "fsi/admin-bundle" : "^4.0@dev",
-        "fsi/data": "^1.0@dev",
-        "fsi/translatable": "^1.0@dev",
+        "fsi/data" : "^1.0.1",
         "psr/clock": "^1.0",
-        "symfony/console": "^4.4|^5.4",
-        "symfony/dependency-injection": "^4.4|^5.4",
-        "symfony/doctrine-bridge": "^4.4|^5.4",
-        "symfony/form": "^4.4|^5.4",
+        "symfony/console": "^4.4|^5.4|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
+        "symfony/doctrine-bridge": "^4.4|^5.4|^6.0",
+        "symfony/form": "^4.4|^5.4|^6.0",
         "symfony/framework-bundle": "^4.4|^5.4",
-        "symfony/mailer": "^4.4|^5.4",
+        "symfony/mailer": "^4.4|^5.4|^6.0",
         "symfony/property-access": "^4.4|^5.4|^6.0",
         "symfony/security-bundle": "^4.4|^5.4",
-        "symfony/twig-bundle": "^4.4|^5.4",
+        "symfony/twig-bundle": "^4.4|^5.4|^6.0",
         "symfony/validator": "^4.4|^5.4|^6.0",
         "twig/twig": "^3.6"
     },
@@ -40,26 +39,26 @@
         "caciobanu/behat-deprecation-extension": "^2.1",
         "egulias/email-validator": "^3.2",
         "friendsofphp/proxy-manager-lts": "^1.0",
-        "friends-of-behat/mink-browserkit-driver": "^1.6",
-        "friends-of-behat/mink-extension": "^2.7",
+        "friends-of-behat/mink-browserkit-driver": "^1.6.1",
+        "friends-of-behat/mink-extension": "^2.7.4",
         "friends-of-behat/page-object-extension": "^0.3.2",
-        "friends-of-behat/symfony-extension": "^2.3",
+        "friends-of-behat/symfony-extension": "^2.4.1",
         "friends-of-phpspec/phpspec-expect": "^4.0",
-        "fsi/resource-repository-bundle": "^2.2",
+        "fsi/resource-repository-bundle": "^2.2|^3.0.2",
+        "ocramius/proxy-manager": "^2.5",
         "phpspec/phpspec": "^7.0",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-beberlei-assert": "^1.0",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/debug": "^4.4|^5.4",
-        "symfony/dom-crawler": "^4.4|^5.4",
-        "symfony/error-handler": "^4.4|^5.4",
-        "symfony/event-dispatcher": "^4.4|^5.4",
-        "symfony/http-kernel": "^4.4|^5.4",
-        "symfony/monolog-bridge": "^4.4|^5.4",
+        "symfony/dom-crawler": "^4.4|^5.4|^6.0",
+        "symfony/error-handler": "^4.4|^5.4|^6.0",
+        "symfony/event-dispatcher": "^4.4|^5.4|^6.0",
+        "symfony/http-kernel": "^4.4|^5.4|^6.0",
+        "symfony/monolog-bridge": "^4.4|^5.4|^6.0",
         "symfony/monolog-bundle": "^3.8",
         "symfony/routing": "^4.4|^5.4",
-        "symfony/twig-bridge": "^4.4|^5.4",
-        "symfony/var-dumper": "^4.4|^5.4",
+        "symfony/twig-bridge": "^4.4|^5.4|^6.0",
+        "symfony/var-dumper": "^4.4|^5.4|^6.0",
         "rize/uri-template": "^0.3.5"
     },
     "conflict": {
