--- a/phpstan.neon
+++ b/phpstan.neon
@@ -19,3 +19,5 @@ parameters:
         - '#Call to method getPasswordHasher\(\) on an unknown class Symfony\\Component\\PasswordHasher\\Hasher\\PasswordHasherFactoryInterface\.#'
         - message: '#Cannot call method get\(\) on Symfony\\Component\\DependencyInjection\\ContainerInterface\|null\.#'
           path: %currentWorkingDirectory%/FSiAdminSecurityBundle.php
+        - message: '#Call to an undefined method Symfony\\Component\\HttpFoundation\\RequestStack\:\:get(Main|Master)Request\(\)\.#'
+          path: %currentWorkingDirectory%/EventListener/LogoutUserListener.php
