--- a/features/fixtures/project/config/conditional/security_4.yaml
+++ b/features/fixtures/project/config/conditional/security_4.yaml
@@ -10,7 +10,7 @@ security:
 
         admin_panel:
             pattern: ^/admin
-            logout_on_user_change: true
+            user_checker: admin_security.user_checker.disabled_user_checker
             form_login:
                 provider: entity_provider
                 check_path: fsi_admin_security_user_check
