Allowed all Symfony 6.x components and doctrine/orm ^3.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             - 80:80
             - 443:443
         environment:
+            XDEBUG_CONFIG: "idekey=PHPSTORM discover_client_host=false client_host=host.docker.internal"
+            XDEBUG_MODE: debug
             PHP_IDE_CONFIG: 'serverName=localhost'
             DOCROOT: /var/www/application/features/fixtures/project/public
             HOST_UID: 1000
@@ -16,3 +18,5 @@ services:
         volumes:
             - .:/var/www/application
             - ~/.composer:/var/www/.composer
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
