--- a/behat.yml
+++ b/behat.yml
@@ -42,8 +42,7 @@ default: &default
             kernel:
                 path: features/fixtures/project/src/Kernel.php
                 class: FSi\FixturesBundle\Kernel
-        Caciobanu\Behat\DeprecationExtension:
-            mode: weak
+        Caciobanu\Behat\DeprecationExtension: ~
 
 travis:
     <<: *default
