--- a/composer.json
+++ b/composer.json
@@ -14,19 +14,19 @@
         "php": "^7.4|^8.0",
         "beberlei/assert": "^3.3",
         "doctrine/doctrine-bundle": "^2.7",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "^2.7|^3.0",
         "doctrine/persistence": "^2.5|^3.0",
         "fsi/admin-bundle" : "^4.0@dev",
-        "fsi/data" : "^1.0.2",
+        "fsi/data" : "^1.0.2@dev",
         "psr/clock": "^1.0",
         "symfony/console": "^4.4|^5.4|^6.0",
         "symfony/dependency-injection": "^4.4|^5.4|^6.0",
         "symfony/doctrine-bridge": "^4.4|^5.4|^6.0",
         "symfony/form": "^4.4|^5.4|^6.0",
-        "symfony/framework-bundle": "^4.4|^5.4",
+        "symfony/framework-bundle": "^4.4|^5.4|^6.0",
         "symfony/mailer": "^4.4|^5.4|^6.0",
         "symfony/property-access": "^4.4|^5.4|^6.0",
-        "symfony/security-bundle": "^4.4|^5.4",
+        "symfony/security-bundle": "^4.4|^5.4|^6.0",
         "symfony/twig-bundle": "^4.4|^5.4|^6.0",
         "symfony/validator": "^4.4|^5.4|^6.0",
         "twig/twig": "^3.6"
@@ -56,7 +56,7 @@
         "symfony/http-kernel": "^4.4|^5.4|^6.0",
         "symfony/monolog-bridge": "^4.4|^5.4|^6.0",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/routing": "^4.4|^5.4",
+        "symfony/routing": "^4.4|^5.4|^6.0",
         "symfony/twig-bridge": "^4.4|^5.4|^6.0",
         "symfony/var-dumper": "^4.4|^5.4|^6.0",
         "rize/uri-template": "^0.3.5"
