--- a/features/fixtures/project/config/conditional/security_4.yaml
+++ b/features/fixtures/project/config/conditional/security_4.yaml
@@ -20,3 +20,9 @@ security:
                 path: fsi_admin_security_user_logout
             anonymous: ~
             switch_user: true
+
+    access_control:
+        - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/activation/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/password-reset/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: [ROLE_ADMIN, ROLE_REDACTOR] }
