--- a/composer.json
+++ b/composer.json
@@ -37,14 +37,15 @@
         "behat/mink": "^1.10",
         "behat/mink-selenium2-driver": "^1.6",
         "caciobanu/behat-deprecation-extension": "^2.1",
-        "egulias/email-validator": "^3.2",
+        "egulias/email-validator": "^3.2|^4.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
         "friends-of-behat/mink-browserkit-driver": "^1.6.1",
         "friends-of-behat/mink-extension": "^2.7.4",
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.4.1",
         "friends-of-phpspec/phpspec-expect": "^4.0",
-        "fsi/resource-repository-bundle": "^2.2|^3.0.2",
+        "fsi/resource-repository-bundle": "^2.2|^3.0.2@dev",
+        "fsi/translatable": "^1.0@dev",
         "ocramius/proxy-manager": "^2.5",
         "phpspec/phpspec": "^7.0",
         "phpstan/phpstan": "^1.10",
