--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.7|^3.0",
         "doctrine/persistence": "^2.5|^3.0",
-        "fsi/admin-bundle" : "^4.0@dev",
-        "fsi/data" : "^1.0.2@dev",
+        "fsi/admin-bundle" : "^4.0",
+        "fsi/data" : "^1.0.2",
         "psr/clock": "^1.0",
         "symfony/console": "^4.4|^5.4|^6.0",
         "symfony/dependency-injection": "^4.4|^5.4|^6.0",
@@ -44,8 +44,8 @@
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.4.1",
         "friends-of-phpspec/phpspec-expect": "^4.0",
-        "fsi/resource-repository-bundle": "^2.2|^3.0.2@dev",
-        "fsi/translatable": "^1.0@dev",
+        "fsi/resource-repository-bundle": "^2.2|^3.0.2",
+        "fsi/translatable": "^1.0",
         "ocramius/proxy-manager": "^2.5",
         "phpspec/phpspec": "^7.0",
         "phpstan/phpstan": "^1.10",
