--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
                 nohup php -S 0.0.0.0:8080 -t features/fixtures/project/web > features/fixtures/project/var/logs/server.log 2>&1 &
                 sleep 5
             - name: Functional tests
-              run: vendor/bin/behat --no-snippets --profile=travis -vvv
+              run: vendor/bin/behat --no-snippets --profile=actions -vvv
             - name: Upload logs
               uses: actions/upload-artifact@master
               with:
