--- a/composer.json
+++ b/composer.json
@@ -43,11 +43,10 @@
         "friends-of-behat/mink-extension": "^2.7.4",
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.4.1",
-        "friends-of-phpspec/phpspec-expect": "^4.0",
-        "fsi/resource-repository-bundle": "^2.2|^3.0.2",
+        "fsi/resource-repository-bundle": "^2.2|^3.0.2@dev",
         "fsi/translatable": "^1.0",
         "ocramius/proxy-manager": "^2.5",
-        "phpspec/phpspec": "^7.0",
+        "phpspec/phpspec": "^7.0|^8.0@dev",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-beberlei-assert": "^1.0",
         "squizlabs/php_codesniffer": "^3.7",
@@ -60,7 +59,7 @@
         "symfony/routing": "^4.4|^5.4|^6.0",
         "symfony/twig-bridge": "^4.4|^5.4|^6.0",
         "symfony/var-dumper": "^4.4|^5.4|^6.0",
-        "rize/uri-template": "^0.3.5"
+        "rize/uri-template": "^0.3.5|^0.4.0"
     },
     "conflict": {
         "doctrine/doctrine-cache-bundle": "<1.4.0",
@@ -68,7 +67,8 @@
         "fsi/datasource": "*",
         "twig/twig": "<2.0",
         "symfony/property-info": ">=7.0",
-        "symfony/expression-language": "<4.4"
+        "symfony/expression-language": "<4.4",
+        "symfony/security-core": ">=7.0"
     },
     "config": {
         "bin-dir": "vendor/bin"
