--- a/composer.json
+++ b/composer.json
@@ -10,27 +10,13 @@
             "email": "norbert@orzechowicz.pl"
         }
     ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/chives/resource-repository-bundle.git"
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/chives/admin-bundle.git"
-        },
-        {
-            "type": "git",
-            "url": "https://github.com/fsi-open/phpspec.git"
-        }
-    ],
     "require": {
         "php": "^7.4|^8.0",
         "beberlei/assert": "^3.3",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.7|^3.0",
         "doctrine/persistence": "^2.5|^3.0",
-        "fsi/admin-bundle" : "^4.0|dev-dev as 5.0",
+        "fsi/admin-bundle" : "^4.0",
         "fsi/data" : "^1.0.2",
         "psr/clock": "^1.0",
         "symfony/console": "^4.4|^5.4|^6.0|^7.0",
@@ -57,10 +43,10 @@
         "friends-of-behat/mink-extension": "^2.7.4",
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.4.1",
-        "fsi/resource-repository-bundle": "^2.2|^3.0.2|dev-dev as 4.0",
+        "fsi/resource-repository-bundle": "^2.2|^3.0.2|^4.0",
         "fsi/translatable": "^1.0",
         "ocramius/proxy-manager": "^2.5",
-        "phpspec/phpspec": "^7.0|^8.0@dev",
+        "phpspec/phpspec": "^7.0|^8.0",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-beberlei-assert": "^1.0",
         "squizlabs/php_codesniffer": "^3.7",
