--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /features/fixtures/project/var/mysql/*
 !/features/fixtures/project/var/.gitkeep
 !/features/fixtures/project/var/data/.gitkeep
+/features/fixtures/project/config/reference.php
 /features/fixtures/project/config/parameters.yaml
 *.sqlite
 .phpcs-cache
