--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "beberlei/assert": "^3.3",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/orm": "^2.7|^3.0",
-        "doctrine/persistence": "^2.5|^3.0",
+        "doctrine/persistence": "^2.5.7|^3.0|^4.0",
         "fsi/admin-bundle" : "^4.0",
         "fsi/data" : "^1.0.2",
         "psr/clock": "^1.0",
@@ -36,10 +36,10 @@
         "behat/behat": "^3.11",
         "behat/mink": "^1.10",
         "behat/mink-selenium2-driver": "^1.6",
+        "behat/mink-browserkit-driver": "^2.0",
         "caciobanu/behat-deprecation-extension": "^2.1",
         "egulias/email-validator": "^3.2|^4.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
-        "friends-of-behat/mink-browserkit-driver": "^1.6.1",
         "friends-of-behat/mink-extension": "^2.7.4",
         "friends-of-behat/page-object-extension": "^0.3.2",
         "friends-of-behat/symfony-extension": "^2.4.1",
@@ -47,8 +47,8 @@
         "fsi/translatable": "^1.0",
         "ocramius/proxy-manager": "^2.5",
         "phpspec/phpspec": "^7.0|^8.0",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-beberlei-assert": "^1.0",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-beberlei-assert": "^2.0",
         "squizlabs/php_codesniffer": "^3.7",
         "symfony/dom-crawler": "^4.4|^5.4|^6.0|^7.0",
         "symfony/error-handler": "^4.4|^5.4|^6.0|^7.0",
